Light updates to page & resume

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 			<article id="me" class="panel">
 				<header>
 					<h1>Matthieu Gay-Bellile</h1>
-					<p>Software Engineer</p>
+					<p>Software Engineer / Hacker</p>
 				</header>
 				<a href="#bio" class="jumplink pic">
 					<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
@@ -50,7 +50,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 					<h2>About Me</h2>
 				</header>
 				<p>
-					I'm a sophomore at the Georgia Institute of Technology, currently pursuing a B.S. in Computer Science. I was born in France and grew up in Atlanta and abroad. I like eating obscure asian food, sitting on rooftops, and building computers.
+					I'm a sophomore at the Georgia Institute of Technology, currently pursuing a B.S. in Computer Science. I was born in France and grew up in Atlanta and abroad. I love building software, but I love breaking it more. I also build computers, every now and then when the opportunity presents itself.
 				</p>
 			</article>
 
@@ -220,7 +220,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 <!-- Footer -->
 <div id="footer">
 	<ul class="copyright">
-		<li>&copy; 2016 Matthieu Gay-Bellile</li>
+		<li>&copy; 2017 Matthieu Gay-Bellile</li>
 	</ul>
 </div>
 
