Change domain to mgb.sh

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<h2>Send a Message</h2>
 			</header>
 			<form action="https://formspree.io/matthieu.gb@gatech.edu" method="post">
-				<input type="hidden" name="_next" value="//avilad.github.io/#thanks" />
+				<input type="hidden" name="_next" value="//mgb.sh/#thanks" />
 				<div>
 					<div class="row">
 						<div class="6u 12u$(mobile)">
