Kabbage resume & bio update

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 			<article id="me" class="panel">
 				<header>
 					<h1>Matthieu Gay-Bellile</h1>
-					<p>Software Engineer / Penetration Tester</p>
+					<p>Software Engineer</p>
 				</header>
 				<a href="#bio" class="jumplink pic">
-					<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
+					<span class="arrow icon fa-chevron-right"><span>About Me</span></span>
 					<img src="images/me.jpg" alt="" />
 				</a>
 			</article>
@@ -50,7 +50,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 					<h2>About Me</h2>
 				</header>
 				<p>
-					I'm a junior at the Georgia Institute of Technology, currently pursuing a B.S. in Computer Science, with concentrations in Systems & Architecture and Artificial Intelligence. I was born in France and lived in Atlanta, China, Japan, and Switzerland before moving back to Atlanta for college. I enjoy building all kinds of software, from webapps to compilers, and love breaking other people's software as well. I also like building PCs for gaming, and climbing up onto roofs at night.
+					I'm a backend software engineer, currently employed at <a href="https://www.kabbage.com/">Kabbage</a> in Atlanta. I'm working on a streaming distributed system to gather & persist raw customer data for underwriting our loans, with an emphasis on high performance, resiliency, and low overhead. I graduated from the Georgia Institute of Technology in 2019 with a B.S. in Computer Science, with concentrations in Systems & Architecture and Artificial Intelligence. I was born in Paris, France and grew up in the US, Japan, China, and Switzerland.
 				</p>
 			</article>
 
@@ -220,7 +220,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 <!-- Footer -->
 <div id="footer">
 	<ul class="copyright">
-		<li>&copy; 2017-2018 Matthieu Gay-Bellile</li>
+		<li>&copy; 2017-2020 Matthieu Gay-Bellile</li>
 	</ul>
 </div>
 
