--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 			<a href="#me" class="icon fa-home active"><span>Home</span></a>
 			<a href="#bio" class="icon fa-user"><span>About Me</span></a>
 			<a href="#work" class="icon fa-briefcase"><span>Work</span></a>
-			<a href="files/Matthieu_Gay-Bellile_Resume.pdf" class="icon fa-file-text"><span>Resume</span></a>
+			<a href="resume.pdf" class="icon fa-file-text"><span>Resume</span></a>
 			<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
 			<a href="https://github.com/Avilad" class="icon fa-github"><span>GitHub</span></a>
 		</nav>
